# applescript-decompiler

./: .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
applescript_decompiler/: __init__.py  analyzer.py  ast.py  decompiler.py  utils.py
demo/: demo_output.out  demo_runonly.scpt  demo_source.applescript
jinmo_applescript_disassembler/: README.md  setup.py
jinmo_applescript_disassembler/jinmo_applescript_disassembler/: disassembler.py
jinmo_applescript_disassembler/jinmo_applescript_disassembler/engine/: fasparser.py
jinmo_applescript_disassembler/jinmo_applescript_disassembler/engine/fasobjects/: data_block.py
